--- a/creator.html
+++ b/creator.html
@@ -130,6 +130,12 @@
         <li><a class="hover" href="https://twitter.com/yo_sh_no">吉野</a></li>
         <li><a class="hover" href="https://twitter.com/reyRavi1024">鴒</a></li>
       </ui>
+      <div class="chronology-top">
+        <h4>年表作成</h4>
+      </div>
+      <ui class="chronology-list">
+        <li><a class="hover" href="https://twitter.com/fumitsuki_511">文月パインギ</a></li>
+      </ui>
       <div class="message-top">
         <h4>メッセージ</h4>
       </div>
@@ -140,7 +146,9 @@
         <li><a class="hover" href="https://twitter.com/kuromi_dsk">DSK</a></li>
         <li><a class="hover" href="https://twitter.com/flafladdd">fの人</a></li>
         <li><a class="hover" href="https://twitter.com/hydrakecat">hk</a></li>
+        <li><a class="hover" href="https://twitter.com/marosassa">marosassa</a></li>
         <li><a class="hover" href="https://twitter.com/VASS_105">VASS</a></li>
+        <li><a class="hover" href="https://twitter.com/KARaSnoenDo">watoshi</a></li>
         <li><a class="hover" href="https://twitter.com/mr_ynr">ynr</a></li>
         <li><a class="hover" href="https://twitter.com/Mu1tip13">あ</a></li>
         <li><a class="hover" href="https://twitter.com/nemnem_2324">あお</a></li>
@@ -175,7 +183,10 @@
         <li><a class="hover" href="https://twitter.com/7040_OO">ななこ</a></li>
         <li><a class="hover" href="https://twitter.com/Power_megane">ナンプラー専門店</a></li>
         <li><a class="hover" href="https://twitter.com/ninigi_nichijou">ニニギ</a></li>
+        <li><a class="hover" href="https://twitter.com/nghk_1107">ねがはっこ</a></li>
         <li><a class="hover" href="https://twitter.com/noaru_zakaia">ノアル･ザカイア</a></li>
+        <li><a class="hover" href="https://twitter.com/02nosu">のすけ</a></li>
+        <li><a class="hover" href="https://twitter.com/nonnonqo_op">のんのん</a></li>
         <li><a class="hover" href="https://twitter.com/hakumai__umama">はくまい</a></li>
         <li><a class="hover" href="https://twitter.com/hassy9428">はっしー</a></li>
         <li><a class="hover" href="https://twitter.com/isgm_bappe">バッペ</a></li>
@@ -184,11 +195,14 @@
         <li><a class="hover" href="https://twitter.com/felt_ura">ふぇると</a></li>
         <li><a class="hover" href="https://twitter.com/bridge_break">ブリッジぶぶぶさん</a></li>
         <li><a class="hover" href="https://twitter.com/Nzanddmp">ぷりんぱん</a></li>
+        <li><a class="hover" href="https://twitter.com/rurimatsuri_3">ぺん</a></li>
         <li><a class="hover" href="https://twitter.com/hoeru_">ほえるー</a></li>
         <li><a class="hover" href="https://twitter.com/Diehardfanofsth">ポップコーンモンスター</a></li>
         <li><a class="hover" href="https://twitter.com/MKy0611">マク</a></li>
         <li><a class="hover" href="https://twitter.com/miyabi_nanaya">みやび</a></li>
         <li><a class="hover" href="https://twitter.com/nakashi_v2">もなか</a></li>
+        <li><a class="hover" href="https://twitter.com/MBOyasutaro">やすたろう</a></li>
+        <li><a class="hover" href="https://twitter.com/nijisanji246">ヤマーダ</a></li>
         <li><a class="hover" href="https://twitter.com/yu_feketerigo">ユー</a></li>
         <li><a class="hover" href="https://twitter.com/I_gamiL0VE">ゆーふぉ</a></li>
         <li><a class="hover" href="https://twitter.com/illust__kaki">よく客食う柿</a></li>
@@ -200,27 +214,34 @@
         <li><a class="hover" href="https://twitter.com/Wakaba_sub">わかば</a></li>
         <li><a class="hover" href="https://twitter.com/SFTS">わんぱく</a></li>
         <li><a class="hover" href="https://twitter.com/XRmGROE9TzmsFvK">亜稀代雅</a></li>
+        <li><a class="hover" href="https://twitter.com/Ayun0_4o8ki">鮎塩</a></li>
         <li><a class="hover" href="https://twitter.com/Yama_Yami_86">大型犬さん</a></li>
         <li><a class="hover" href="https://twitter.com/kyomu_ume">虚無埋めエンバン</a></li>
         <li><a class="hover" href="https://twitter.com/kuroneko__V">黒猫</a></li>
         <li><a class="hover" href="https://twitter.com/sano_stone">佐野ストーン</a></li>
         <li><a class="hover" href="https://twitter.com/3arimr7">三×七</a></li>
         <li><a class="hover" href="https://twitter.com/murasaki_814">舌噛み雀</a></li>
+        <li><a class="hover" href="https://twitter.com/juunishiaya">十西</a></li>
         <li><a class="hover" href="https://twitter.com/ikken_nonkei">焦燥院動揺堂</a></li>
         <li><a class="hover" href="https://twitter.com/makiroll_summer">縦巻きロールお嬢様部</a></li>
+        <li><a class="hover" href="https://twitter.com/toka_kai1212">冬灰</a></li>
         <li><a class="hover" href="https://twitter.com/canola_rabbit">菜兎</a></li>
         <li><a class="hover" href="https://twitter.com/K_12_17_">乳酸菌</a></li>
         <li><a class="hover" href="https://twitter.com/hakushiki_awa">背後霊博識</a></li>
         <li><a class="hover" href="https://twitter.com/H4r1_03">針</a></li>
+        <li><a class="hover" href="https://twitter.com/fumitsuki_511">文月パインギ</a></li>
         <li><a class="hover" href="https://twitter.com/ojyo_SR346">柳崎紫苑</a></li>
+        <li><a class="hover" href="https://twitter.com/yo_sh_no">吉野</a></li>
         <li><a class="hover" href="#">匿名神者&#8544;</a></li><!--@SjZz2jFeNX64245-->
         <li><a class="hover" href="#">匿名神者&#8545;</a></li><!--@irukasan63-->
         <li><a class="hover" href="#">匿名神者&#8546;</a></li><!--@misiranu_110-->
+        <li><a class="hover" href="#">匿名神者&#8547;</a></li><!--@sRRRR_519-->
       </ui>
       <div class="websiteseisaku-top">
-        <h4>年表作成/サイトデザイン<br>/コーティング</h4>
+        <h4>サイトデザイン/コーティング</h4>
       </div>
       <ui class="websiteseisaku-list">
+        <li><a class="hover" href="https://twitter.com/s__y_ks">そうや</a></li>
         <li><a class="hover" href="https://twitter.com/fumitsuki_511">文月パインギ</a></li>
       </ui>
       <div class="organizer-top">
