--- a/Illustrations.html
+++ b/Illustrations.html
@@ -232,8 +232,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="あんこジャム。">
+                        <a class="expansion" href="./images/Illustrations/ankojamu-expansion.jpg">
+                            <img src="./images/Illustrations/ankojamu.jpg" alt="あんこジャム。">
                         </a>
                     </figure>
                     <div>
@@ -280,8 +280,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="しおみるく">
+                        <a class="expansion" href="./images/Illustrations/shiomiruku-expansion.jpg">
+                            <img src="./images/Illustrations/shiomiruku.jpg" alt="しおみるく">
                         </a>
                     </figure>
                     <div>
@@ -760,8 +760,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="冬灰">
+                        <a class="expansion" href="./images/Illustrations/toka-expansion.jpg">
+                            <img src="./images/Illustrations/toka.jpg" alt="冬灰">
                         </a>
                     </figure>
                     <div>
