--- a/Illustrations.html
+++ b/Illustrations.html
@@ -208,8 +208,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="あっきー">
+                        <a class="expansion" href="./images/Illustrations/altuki--expansion.jpg">
+                            <img src="./images/Illustrations/altuki-.jpg" alt="あっきー">
                         </a>
                     </figure>
                     <div>
