--- a/Illustrations.html
+++ b/Illustrations.html
@@ -772,8 +772,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="匿名エナガ">
+                        <a class="expansion" href="./images/Illustrations/tokumeienaga-expansion.jpg">
+                            <img src="./images/Illustrations/tokumeienaga.jpg" alt="匿名エナガ">
                         </a>
                     </figure>
                     <div>
