--- a/Illustrations.html
+++ b/Illustrations.html
@@ -340,8 +340,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="ただのにぼし">
+                        <a class="expansion" href="./images/Illustrations/tadanoniboshi-expansion.jpg">
+                            <img src="./images/Illustrations/tadanoniboshi.jpg" alt="ただのにぼし">
                         </a>
                     </figure>
                     <div>
