--- a/Illustrations.html
+++ b/Illustrations.html
@@ -316,8 +316,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="そうや">
+                        <a class="expansion" href="./images/Illustrations/souya-expansion.jpg">
+                            <img src="./images/Illustrations/souya.jpg" alt="そうや">
                         </a>
                     </figure>
                     <div>
@@ -604,8 +604,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="小豆沢きき">
+                        <a class="expansion" href="./images/Illustrations/azukisawakiki-expansion.jpg">
+                            <img src="./images/Illustrations/azukisawakiki.jpg" alt="小豆沢きき">
                         </a>
                     </figure>
                     <div>
@@ -652,6 +652,18 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
+                        <a class="expansion" href="./images/Illustrations/ayutarou-expansion.jpg">
+                            <img src="./images/Illustrations/ayutarou.jpg" alt="鮎太郎">
+                        </a>
+                    </figure>
+                    <div>
+                        <dl>
+                            <dt>鮎太郎</dt>
+                        </dl>
+                    </div>
+                  </li>
+                  <li data-aos="fade-up">
+                    <figure>
                         <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
                             <img src="./images/Illustrations/名称未設定 4.png" alt="雨藤シイ">
                         </a>
@@ -664,8 +676,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="茅乃">
+                        <a class="expansion" href="./images/Illustrations/kayano-expansion.jpg">
+                            <img src="./images/Illustrations/kayano.jpg" alt="茅乃">
                         </a>
                     </figure>
                     <div>
@@ -731,30 +743,6 @@
                     <div>
                         <dl>
                             <dt>十西</dt>
-                        </dl>
-                    </div>
-                  </li>
-                  <li data-aos="fade-up">
-                    <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="空野詠夏">
-                        </a>
-                    </figure>
-                    <div>
-                        <dl>
-                            <dt>空野詠夏</dt>
-                        </dl>
-                    </div>
-                  </li>
-                  <li data-aos="fade-up">
-                    <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="多鮎">
-                        </a>
-                    </figure>
-                    <div>
-                        <dl>
-                            <dt>多鮎</dt>
                         </dl>
                     </div>
                   </li>
