--- a/Illustrations.html
+++ b/Illustrations.html
@@ -64,8 +64,8 @@
             <ul class="illustration-list">
                 <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="☾·̩͙">
+                        <a class="expansion" href="./images/Illustrations/runa-expansion.jpg">
+                            <img src="./images/Illustrations/runa.jpg" alt="☾·̩͙">
                         </a>
                     </figure>
                     <div>
@@ -592,8 +592,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="蒼緒猫">
+                        <a class="expansion" href="./images/Illustrations/aononeko-expansion.jpg">
+                            <img src="./images/Illustrations/aononeko.jpg" alt="蒼緒猫">
                         </a>
                     </figure>
                     <div>
@@ -664,8 +664,8 @@
                   </li>
                   <li data-aos="fade-up">
                     <figure>
-                        <a class="expansion" href="./images/Illustrations/名称未設定 4.png">
-                            <img src="./images/Illustrations/名称未設定 4.png" alt="雨藤シイ">
+                        <a class="expansion" href="./images/Illustrations/utoushii-expansion.jpg">
+                            <img src="./images/Illustrations/utoushii.jpg" alt="雨藤シイ">
                         </a>
                     </figure>
                     <div>
